Agrega test y pequeños cambios para cumplir el coverage de sonar